--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -133,12 +133,12 @@
 
 .tarjeta.color-secundario
   background-color: #ADD3FD
-  p
+  p,i
     color: $color-sistema-texto
 
 .tarjeta.color-acento-botones
   background-color: #DCECFE
-  p
+  p,i
     color: $color-sistema-texto
 
 .bg
