--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -52,6 +52,8 @@
 
 .slyder-a__bullets__item
   margin: 0 3px
+.slyder-a__bullets__item--active
+  background-color: #FFFFFF
 
 .slyder-a__btn--sigt, .slyder-a__btn--atrs
   background-color: #FFCE00
