--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -191,6 +191,22 @@
   &-c12
     background-color: #8DEECC
     border-radius: 15px
+  &-c13
+    background-color: #ADD3FD
+    border-top-left-radius: 15px
+    border-bottom-left-radius: 15px
+    @media screen and ( max-width: $bp-max-lg )
+      border-top-right-radius: 15px
+      border-bottom-left-radius: 0px
+  &-c14
+    background-color: #DCECFE
+  &-c15
+    background-color: #ADD3FD
+    border-top-right-radius: 15px
+    border-bottom-right-radius: 15px
+    @media screen and ( max-width: $bp-max-lg )
+      border-top-right-radius: 0px
+      border-bottom-left-radius: 15px
 
 .txt
   &-c1
