--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -117,8 +117,8 @@
   transition: all 0.5s ease-out
 .tarjeta.color-primario:hover
   background-color: #ADD3FD
-  p
-    color: #273A89
+  *
+    color: #273A89 !important
 
 .acordion__accion__btn--b
   border: 1px solid #FFCE00
